--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Navbar from '../components/Navbar.astro';
+import Hero from '../components/Hero.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Developer Xander Azuaje">
     <Navbar />
+    <Hero />
 </Layout>
