--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -22,6 +22,7 @@
         /* Style */
         background: var(--container);
         backdrop-filter: blur(5px);
+        z-index: 100;
     }
     #clock {
         color: var(--text);
