--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,45 @@
 import Layout from '../layouts/Layout.astro';
 import Navbar from '../components/Navbar.astro';
 import Hero from '../components/Hero.astro';
+import Greeter from '../components/Greeter.astro';
+
+import copy from '../utils/copy';
 ---
 
 <Layout title="Developer Xander Azuaje">
     <Navbar />
-    <Hero />
+    <main id="splash">
+        <Hero />
+        <Greeter title="About me" description={copy.description} />
+    </main>
 </Layout>
+
+<style>
+    #splash {
+        padding-top: 30vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        height: 100vh;
+    }
+</style>
+
+<script>
+    import gsap from 'gsap';
+
+    const tl = gsap.timeline();
+
+    tl.from('#hero', {
+        y: -150,
+        duration: 1,
+        opacity: 0,
+        ease: 'power3.out',
+    });
+    tl.from('#greeter', {
+        y: 150,
+        duration: 1,
+        opacity: 0,
+        ease: 'power3.out',
+    }, 0.3);
+</script>
