--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,6 +27,8 @@ import 'normalize.css';
 <style is:global>
     * {
         box-sizing: border-box;
+        margin: 0;
+        padding: 0;
     }
 	:root {
         /* Color styles */
@@ -35,7 +37,7 @@ import 'normalize.css';
         --accent: rgba(223, 38, 96, 1);
         --container: rgba(236, 211, 248, 0.05);
         --placeholder: rgba(236, 211, 248, 0.5);
-        --primary-hover: rgba(225, 55, 194, 1);
+        --primary-hover: rgba(229, 117, 215, 1);
         --buttons----primary: rgba(225, 55, 194, 1);
         --buttons----secondary: rgba(49, 7, 20, 1);
 
@@ -58,10 +60,16 @@ import 'normalize.css';
         --body-bold: 1rem;
 
         /* Effect styles */
-        --button-hover:  0px 0px 9.800000190734863px rgba(236, 211, 248, 0.2);
+        --button-hover:  0px 0px 9.800000190734863px rgba(236, 211, 248, 0.3);
     }
 	body {
 		font-family: var(--body-font);
 		background-color: var(--background);
 	}
+    .container {
+        background-color: var(--container);
+        padding: 1rem;
+        border-radius: 0.25rem;
+        color: var(--text);
+    }
 </style>
