--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -61,6 +61,9 @@ import 'normalize.css';
 
         /* Effect styles */
         --button-hover:  0px 0px 9.800000190734863px rgba(236, 211, 248, 0.3);
+
+        /* Animation easing */
+        --bounce: cubic-bezier(0.175, 0.885, 0.32, 1.275);
     }
 	body {
 		font-family: var(--body-font);
