--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -13,6 +13,9 @@
         align-items: center;
         text-align: center;
         gap: 0.6rem;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
     }
     #greet {
         font-size: var(--body);
