--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import Greeter from '../components/Greeter.astro';
 import Separator from '../components/Separator.astro';
 import Job from '../components/Job.tsx';
 import Project from '../components/Project.astro';
+import Contact from '../components/Contact.astro';
 
 import type { jobI, project_t } from '../utils/copy';
 import { copy } from '../utils/copy';
@@ -43,6 +44,13 @@ import { copy } from '../utils/copy';
             />
         ))}
     </section>
+    <Separator title="Contact" number="3" />
+    <Contact />
+    <footer>
+        <p>
+            Made with <span class="heart">&lt;3</span> by Xander Azuaje
+        </p>
+    </footer>
 </Layout>
 
 <style>
@@ -63,6 +71,18 @@ import { copy } from '../utils/copy';
         max-width: 800px;
         margin: 0 auto;
     }
+    footer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        background-color: var(--color-primary);
+        color: var(--placeholder);
+        margin: 4rem 0;
+    }
+    p > span {
+        color: var(--accent);
+    }
 </style>
 
 <script>
@@ -71,29 +91,25 @@ import ScrollTrigger from 'gsap/ScrollTrigger';
 
 gsap.registerPlugin(ScrollTrigger);
 
-// Animate Hero
 gsap.from('#hero', {
-    scrollTrigger: '#hero',
     y: -150,
     duration: 0.3,
     opacity: 0,
     ease: 'power3.out',
+    markers: true,
 });
 
-// Animate Greeter
 gsap.from('#greeter', {
-    scrollTrigger: '#greeter',
     y: 150,
     duration: 1,
     opacity: 0,
     ease: 'power3.out',
 });
 
-// Animate Separator
 gsap.from('#separator-1', {
     scrollTrigger: {
         trigger: '#separator-1',
-        start: 'top 80%',
+        start: 'top bottom',
     },
     scaleY: 0,
     duration: 0.5,
@@ -101,7 +117,6 @@ gsap.from('#separator-1', {
     ease: 'power3.out',
 });
 
-// Animate Job Experience
 gsap.from('.job-experience', {
     scrollTrigger: {
         trigger: '#job-experience',
@@ -116,7 +131,7 @@ gsap.from('.job-experience', {
 gsap.from('#separator-2', {
     scrollTrigger: {
         trigger: '#separator-2',
-        start: 'top bottom',
+        start: 'top 120%',
     },
     scaleY: 0,
     duration: 0.5,
@@ -126,12 +141,32 @@ gsap.from('#separator-2', {
 gsap.from('.project', {
     scrollTrigger: {
         trigger: '#projects',
-        start: 'top bottom',
+        start: 'top 100%',
     },
     scale: 0,
     duration: 0.3,
     opacity: 0,
     ease: 'power3.out',
     stagger: 0.2,
+});
+gsap.from('#separator-3', {
+    scrollTrigger: {
+        trigger: '#separator-3',
+        start: 'bottom 130%',
+    },
+    scaleY: 0,
+    duration: 0.5,
+    opacity: 0,
+    ease: 'power3.out',
+});
+gsap.from('#contact', {
+    scrollTrigger: {
+        trigger: '#contact',
+        start: 'top 120%',
+    },
+    y: 150,
+    duration: 0.3,
+    opacity: 0,
+    ease: 'power3.out',
 });
 </script>
